--- a/introduction.tex
+++ b/introduction.tex
@@ -14,7 +14,7 @@ This increase in skill, largely attributable to improved global numerical weathe
 
 TC intensification is fundamentally driven by meso- and micro-scale processes that are not well represented in global models or even regional convection-permitting models \citep{Rogersetal2006}.
 Until very recently, many of these processes---particularly those in the boundary layer \citep{Blacketal2007} and upper troposphere \citep{DoyleTCI}---have not been well observed.
-However, two recent field campaigns --- the NASA Hurricane and Severe Storm Sentinel (HS3; \citeauthor{Braunetal2016} \citeyear{Braunetal2016}) and the Office of Naval Research Tropical Cyclone Intensity (TCI) Experiment \citep{DoyleTCI}---have greatly expanded the number of observations available in the upper troposphere of TCs.
+However, two recent field campaigns---the National Aeronautics and Space Administration (NASA) Hurricane and Severe Storm Sentinel (HS3; \citeauthor{Braunetal2016} \citeyear{Braunetal2016}) and the Office of Naval Research Tropical Cyclone Intensity (TCI) Experiment \citep{DoyleTCI}---have greatly expanded the number of observations available in the upper troposphere of TCs.
 This dissertation will use these observations alongside a large rawinsonde dataset to document the tropopause-layer turbulence and static stability structure of TCs, and how this structure evolves as a TC intensifies.
 Idealized modeling also will be employed to explore the mechanisms that might drive the observed evolution.
 A better understanding of these processes will add to the overall knowledge of the TC intensification process and hopefully help to improve theoretical and numerical modeling representations of TCs.
@@ -36,7 +36,7 @@ These theoretical arguments are supported by the three-dimensional radiative-con
 The tropopause can be defined in many ways, depending on the application and the region of interest.
 
 In the midlatitudes, the tropopause often is defined as a surface of constant potential vorticity, typically in the range of 1.5--4 PVU (1 PVU = 10\textsuperscript{-6} K kg\textsuperscript{-1} m\textsuperscript{2} s\textsuperscript{-1}; \citeauthor{Wilcoxetal2011} \citeyear{Wilcoxetal2011}; \citeauthor{HoltonHakim} \citeyear{HoltonHakim}).
-This definition requires knowledge of the 2-dimensional wind field, however, and cannot be determined using only individual dropsondes or rawinsondes.
+This definition requires knowledge of the two-dimensional wind field, however, and cannot be determined using only individual dropsondes or rawinsondes.
 
 The "thermal tropopause" or "lapse-rate tropopause" is defined as "the lowest level at which the lapse rate decreases to 2\textdegree{}C km\textsuperscript{-1} or less, provided that the average lapse rate between this level and all higher levels within 2 km does not exceed 2\textdegree{}C km\textsuperscript{-1}" \citep{WMO1957}.
 Since this definition considers only the vertical temperature gradient, the tropopause height and temperature can be determined using a single sounding.
@@ -48,7 +48,7 @@ Since this definition requires the detection of a minimum, the sounding used to 
 The tropopause so defined has great physical relevance in the tropics.
 In particular, the cold-point temperature influences the exchange of ozone and water vapor between the troposphere and stratosphere \citep{Moteetal1996}, which has important climatological implications \citep{Holtonetal1995}.
 Although few papers have analyzed the effect of TCs on the tropopause, radar observations suggest that TCs can enhance troposphere--stratosphere exchange through deep convection and turbulent mixing \citep{Dasetal2008}.
-In addition, \citep{Davisetal2014} noted that convection within intensifying tropical disturbances can penetrate up to or above the cold-point tropopause, acting to decrease its temperature.
+In addition, \cite{Davisetal2014} noted that convection within intensifying tropical disturbances can penetrate up to or above the cold-point tropopause, acting to decrease its temperature.
 Due to its physical relevance and the availability of high-resolution rawinsonde and dropsonde data to define it, the cold-point tropopause will be used everywhere in this dissertation except in Chapter 2, where the tropopause is not the focus of the results.
 
 \section{Observations of the tropopause in TCs}
@@ -64,9 +64,9 @@ A number of aircraft reconnaissance flights in the 1960s observed very strong ho
 \cite{Penn1966} noted that the tropopause over Hurricane Isbell (1964) sloped upward toward the storm’s inner core by 1.1 km over a 231.5-km horizontal distance.
 This elevated tropopause was associated with horizontal temperature gradients as large as 5\textdegree{}C (18.5 km)\textsuperscript{-1} in the lower stratosphere.
 The coldest temperatures, -85\textdegree{}C, were observed in the regions of most intense convection.
-Likewise in Hurricane Beulah (1967), the coldest temperature, -86\textdegree{}C, was observed a few hundred meters above the highest cloud tops \citep{Waco1970}.
+Likewise, in Hurricane Beulah (1967), the coldest temperature, -86\textdegree{}C, was observed a few hundred meters above the highest cloud tops \citep{Waco1970}.
 Very near the storm center, the temperature at 16.5-km altitude increased from -86\textdegree{}C to -77\textdegree{}C over a horizontal distance less than 30 km as the aircraft approached the storm center [see Fig. 2 ‘‘Run 2’’ in \cite{Waco1970}].
-This strong inward temperature increase was likely associated with an intense upper-tropospheric warm core within and near Beulah’s eye.
+This strong inward temperature increase was likely associated with an intense upper-tropospheric warm core within, and near, Beulah’s eye.
 The anomalous warming associated with this warm core could have implications for the tropopause-layer static stability.
 
 \section{The TC warm core and its influence on the tropopause}
@@ -87,7 +87,7 @@ Although mean descent within the eye maximized in the 12--13-km layer, subsidenc
 Rather, the maximum temperature anomaly developed in the midtroposphere, where static stability reached a local maximum.
 A secondary warming maximum existed near the tropopause, where weaker subsidence coincided with larger static stability in the tropical tropopause layer.
 These results are consistent with \cite{OhnoSatoh2015}, whose idealized simulations exhibited a dramatic increase in upper-tropospheric $\theta$ toward the end of a TC’s intensification.
-Sawyer--Eliassen diagnostics \cite{PendergrassWilloughby2009} revealed that the contribution of balanced dynamics to the upper-tropospheric warming was dominated by the response to latent heating within the eyewall.
+Sawyer--Eliassen diagnostics used by \cite{PendergrassWilloughby2009} revealed that the contribution of balanced dynamics to the upper-tropospheric warming was dominated by the response to latent heating within the eyewall.
 This response was more pronounced later in the period when the vortex grew upward and inertial stability increased in the lower stratosphere, where static stability was large.
 \cite{ZhangChen2012} likewise argued that increasing inertial stability concentrated downdrafts in the highly stable lower stratosphere, leading to strong adiabatic warming in this layer.
 
@@ -116,7 +116,7 @@ This shallow layer of cooling was, however, associated with strong vertical grad
 The magnitude and persistence of this longwave cooling suggests that it could have a direct impact on the static stability near the top of the TC cirrus canopy.
 In particular, persistent cooling near the cloud top could act to destabilize the layer below the cloud top and stabilize the layer above.
 
-In addition to the direct effect of radiative cooling on the tropopause-layer static stability, this cooling also could exert an indirect effect by modifying the storm's radial-vertical circulation.
+In addition to the direct effect of radiative cooling on the tropopause-layer static stability, this cooling also could exert an indirect effect by modifying the storm's radial--vertical circulation.
 \cite{Durranetal2009} described the circulation that develops in response to radiative heating within tropopause-layer cirrus clouds.
 The heating induces upward motion through the heat source, inflow below the heat source, and outflow above.
 \cite{Dinhetal2010} showed that these circulations act to spread cirrus clouds laterally, which then would feed back onto the radiative tendencies.
@@ -129,7 +129,7 @@ Although these circulations are weak, their persistence could drive differential
 The importance of tropopause temperature in theoretical models of TCs, combined with the potential role of static stability in determining the precise structure of the warm core, motivates a closer look at the evolution of the tropopause and static stability in a hurricane.
 
 This dissertation will employ dropsonde and rawinsonde observations, along with idealized modeling, to investigate the structure and evolution of tropopause-layer turbulence and static stability in TCs.
-Chapter 2 examines the radial-vertical structure of bulk Richardson number in TCs, how it varies with storm intensity and time of day, and the relative importance of static stability and vertical wind shear in producing layers conductive to turbulence in the upper troposphere.
+Chapter 2 examines the radial--vertical structure of bulk Richardson number in TCs, how it varies with storm intensity and time of day, and the relative importance of static stability and vertical wind shear in producing layers conductive to turbulence in the upper troposphere.
 Chapter 3 analyzes the tropopause and upper-level static stability evolution of Hurricane Patricia (2015) during its rapid intensification, and hypothesizes mechanisms that might have led to the observed variability.
 Chapter 4 employs idealized, axisymmetric simulations to reproduce the tropopause and static stability tendencies observed in Hurricane Patricia.
 Budget analyses are performed to isolate the most important mechanisms that drive the tropopause variability in the modeled storm.
