Revise Chapter 2 (turb.tex).

--- a/turb.tex
+++ b/turb.tex
@@ -22,10 +22,10 @@ Although severe turbulence is most often observed within 100 km of active convec
 Possible causes of this turbulence include breaking gravity waves \citep{Laneetal2012} and strong vertical wind shear associated with MCS outflow \citep{Zovko-RajakLane2014}.
 Although turbulence near midlatitude MCSs has been studied extensively, few papers have addressed turbulence near TCs.
 
-\cite{Molinarietal2014} examined bulk Richardson number ($R_b$) in TCs using NOAA Gulfstream-IV (G-IV) dropsondes.
+\cite{Molinarietal2014} examined bulk Richardson number ($R_b$) in TCs using National Oceanic and Atmospheric Administration (NOAA) Gulfstream-IV (G-IV) dropsondes.
 They found a steady increase in the frequency of low--Richardson number layers above the 9-km level to a peak near 13 km.
 These layers most often coexisted with low static stability in the upper troposphere, consistent with the in-cloud heating and cloud-top cooling given by \cite{Buetal2014}.
-Because the G-IV dropsonde data rarely extend above the 13-km height, they could not measure the full cirrus canopy, which can reach 16 km \cite{Waco1970}.
+Because the G-IV dropsonde data rarely extend above the 13-km height, they could not measure the full cirrus canopy, which can reach 16 km \citep{Waco1970}.
 The rawinsondes used in the present study provide high-resolution data well into the stratosphere.
 In addition, they sample twice daily and observe a wider range of storm intensity than the G-IV dropsondes.
 The rawinsonde data will allow the following questions to be addressed:
@@ -49,7 +49,7 @@ Sondes are separated into 200-km radial bins about a composite TC center, with e
 This binning ensures that there are sufficient observations in each bin for azimuthal averaging but does not allow for the TC inner core to be resolved.
 
 Every sounding was visually examined to ensure quality, and 218 questionable soundings---constituting less than 3\% of the total number---were removed.
-Of these 218 soundings, 130 were removed because data gaps larger than 1 km arose in the 9--17-km layer; another 84 were removed because they contained upper-tropospheric  vertical  wind shears larger than 40 m s\textsuperscript{-1} km\textsuperscript{-1}; and 3 were removed because they contained multiple observations on the same pressure level.
+Of these 218 soundings, 130 were removed because data gaps larger than 1 km arose in the 9--17-km layer; another 84 were removed because they contained upper-tropospheric  vertical  wind shears larger than 40 m s\textsuperscript{-1} km\textsuperscript{-1}; and three were removed because they contained multiple observations on the same pressure level.
 
 As in \cite{Molinarietal2014}, the remaining 8499 soundings were interpolated to 100-m vertical levels and smoothed using a 1–2–1 smoother.
 The bulk Richardson number
@@ -100,7 +100,7 @@ The distributions of static stability (red lines) and vertical wind shear (blue 
 The lack of a left tail in the distributions is a consequence of the physical nature of the static stability and vertical wind shear terms: in the absence of strong forcing, a static stability less than zero should be rapidly mixed out, so negative static stabilities are rare, and the vertical wind shear term is defined to be greater than zero.
 
 The static stability distribution for points with $R_b < 0.25$ (solid red line) is shifted toward smaller values relative to the same distribution for data points that observe larger $R_b$ (dotted red line).
-This indicates that local decreases in static stability contribute to the generation of low-$R_b$ layers.
+This distribution indicates that local decreases in static stability contribute to the generation of low-$R_b$ layers.
 Similarly, the vertical wind shear distribution for all data points with $R_b < 0.25$ (solid blue line) is shifted toward larger values relative to the same distribution for data points that observe larger $R_b$ (dotted blue line).
 The upper tail of this distribution extends to very large values, indicating that high-magnitude vertical wind shear perturbations also contribute to the generation of low-$R_b$ layers.
 
@@ -112,9 +112,9 @@ Stratifying the soundings by intensity reveals striking differences in the upper
 Hurricanes (Fig. \ref{fig:rb-strat}a) exhibit a broad region where more than 21\% of sondes observe $R_b < 0.25$ at any given level, extending past the 100--300-km radial bin (note that the scale differs from that in Fig. \ref{fig:rb-all}).
 Weak TCs (Fig. \ref{fig:rb-strat}b), on the other hand, possess a more radially confined maximum of less than 9\%.
 
-In hurricanes, the maximum frequency of $R_b<0.25$ at the inner radii is centered near 14-km altitude, whereas in weak TCs it occurs near 13 km.
+In hurricanes, the maximum frequency of $R_b<0.25$ at inner radii is centered near 14-km altitude, whereas in weak TCs it occurs near 13 km.
 The largest frequency of $R_b < 0.25$ in hurricanes---indicated by the warm colors---exhibits a much steeper downward radial slope at the inner radii than that observed in all storms (Fig. \ref{fig:rb-all}).
-At all radii, low Rb extends to higher altitudes in hurricanes than in weak TCs, and larger frequencies of $R_b < 0.25$ extend much farther radially outward.
+At all radii, low $R_b$ extends to higher altitudes in hurricanes than in weak TCs, and larger frequencies of $R_b < 0.25$ extend much farther radially outward.
 
 The differences between the azimuthally averaged numerator and denominator of Eq. \ref{eq:rb} for hurricanes and weak TCs are plotted in Figs. \ref{fig:stabsheardiffs}a and \ref{fig:stabsheardiffs}b, respectively.
 These differences represent hurricane values minus those for weak TCs, such that regions shaded in red exhibit larger values in hurricanes, and regions shaded in blue exhibit smaller values.
@@ -129,17 +129,17 @@ Two layers of enhanced vertical wind shear exist in hurricanes: one centered nea
 The upper layer of enhanced shear is strong, with some differences exceeding 10 m s\textsuperscript{-1} km\textsuperscript{-1} (shear-squared term of 10\textsuperscript{-4} s\textsuperscript{-2}).
 Within an extensive portion of this enhanced shear layer, however, the static stability is too large to allow $R_b$ to fall below 0.25.
 The lower-altitude enhanced shear layer exhibits maximum differences between 6.3 and 7.7 m s\textsuperscript{-1} km\textsuperscript{-1} (shear-squared term of 0.4 and 0.6 x 10\textsuperscript{-4} s\textsuperscript{-2}, respectively).
-This layer lies within a region of smaller static stability than the upper shear layer and appears to be associated with some increased frequency of $R_b<0.25$ at the inner radii in hurricanes (Fig. \ref{fig:tempdiffs}).
+This layer lies within a region of smaller static stability than the upper shear layer and appears to be associated with some increased frequency of $R_b<0.25$ at the inner radii of hurricanes (Fig. \ref{fig:tempdiffs}).
 On the other hand, large $R_b$ differences exist even in regions where the mean vertical wind shear differences are zero.
 For example, at 14-km altitude in the 0–200-km radial bin---where the frequency of $R_b<0.25$ is maximized in hurricanes---the difference in low $R_b$ frequency between hurricanes (Fig. \ref{fig:rb-strat}a) and weak TCs (Fig. \ref{fig:rb-strat}b) is approximately 18\%.
 This same region, however, is characterized by slightly smaller vertical wind shear in hurricanes than in weak TCs (Fig. \ref{fig:stabsheardiffs}b).
 Thus, although increased mean vertical wind shear can contribute to increased frequencies of low $R_b$, it does not appear to be a necessary ingredient.
 
 Decreasing mean static stability is accomplished through a combination of average warming below 14 km and average cooling above as TCs intensify (Fig. \ref{fig:tempdiffs}).
-Hurricanes are at least 1 K warmer than weak TCs throughout most of the mid- to upper troposphere, with a maximum warm anomaly of greater than 3 K at the inner radii.
+Hurricanes are at least 1 K warmer than weak TCs throughout most of the mid- to upper troposphere, with a maximum warm anomaly of greater than 3 K at inner radii.
 Above about 15 km, hurricanes are cooler than weak TCs, with a maximum cold anomaly of greater than 4 K extending past the 200--400-km radial bin.
 
-These temperature differences can arise due to a combination of a number of processes.
+These temperature differences can arise due to a number of processes.
 As a TC intensifies, boundary layer equivalent potential temperature ($\theta_e$) increases near the vortex center.
 Accordingly, the buoyancy of rising air parcels increases, allowing them to penetrate into the lower stratosphere.
 Since the moist lapse rate approaches dry adiabatic in the upper levels, strong adiabatic cooling can occur for moist ascent in the upper troposphere and lower stratosphere.
@@ -163,8 +163,8 @@ As a result, the peaks of the distributions in Fig. \ref{fig:dist-pert} are nega
 
 The perturbation distributions alone are not able to explain why low $R_b$ is more common in hurricanes.
 The static stability distribution for weak TCs (dotted red line) is shifted toward lower values relative to that for hurricanes (solid red line), indicating that stronger local decreases in static stability occur in weak TCs.
-This result alone suggests that weak TCs should have a higher frequency of low Rb than hurricanes, but this is not observed.
-This indicates that the mean static stability is a more important contributor to decreasing $R_b$ in hurricanes than the perturbation static stability.
+This result alone suggests that weak TCs should have a higher frequency of low $R_b$ than hurricanes, but this is not observed.
+This result indicates that the mean static stability is a more important contributor to decreasing $R_b$ in hurricanes than the perturbation static stability.
 The vertical wind shear distribution is shifted toward higher values in hurricanes (solid blue line) relative to weak TCs (dotted blue line).
 This indicates that the shear perturbations in hurricanes are more positive (more favorable for low $R_b$) than in weak TCs.
 These larger perturbations coexist with larger mean vertical wind shear (Fig. \ref{fig:stabsheardiffs}b).
@@ -184,7 +184,7 @@ Considering these opposite extremes of the diurnal cycle--one after extended sun
 The difference between the frequency of $R_b < 0.25$ observed in the evening (Fig. \ref{fig:rb-time}a) and in the morning (Fig. \ref{fig:rb-time}b) is considerably smaller than the difference between the two intensity classifications shown in Figs. \ref{fig:rb-strat}a and \ref{fig:rb-strat}b.
 Evidence exists, however, that low $R_b$ is more common in the morning than in the evening.
 The region in which low $R_b$ is most common at 1200 UTC---near 200 km---is the radius at which the diurnal pulse of cold cloud is expected to be located at 0800 LST.
-Since the majority of these sondes were released in the eastern time zone, where 1200 UTC corresponds to 0700 LST, these results indicate that the morning maximum of low Rb is located near the radius of the diurnal pulse as described by \cite{Dunionetal2014}.
+Since the majority of these sondes were released in the eastern time zone, where 1200 UTC corresponds to 0700 LST, these results indicate that the morning maximum of low $R_b$ is located near the radius of the diurnal pulse as described by \cite{Dunionetal2014}.
 
 The diurnal variation of azimuthally averaged static stability (Fig. \ref{fig:stabsheartime}a) and vertical wind shear (Fig. \ref{fig:stabsheartime}b) is small.
 Upper-tropospheric wind shear might be slightly larger in the morning than in the evening, but this difference is not statistically significant.
@@ -192,7 +192,7 @@ The static stability profile and the tropopause level are nearly identical at 00
 Thus, unlike the intensity variability seen in the previous section, the $R_b$ differences do not appear to be attributable to a more favorable average background state.
 
 Distributions of the perturbation static stability and vertical wind shear (Fig. \ref{fig:dist-pert-time}) are shifted toward smaller values in the morning relative to the evening.
-This indicates that local static stability perturbations are more conducive to low Rb in the morning, while local shear perturbations are less conducive.
+This indicates that local static stability perturbations are more conducive to low $R_b$ in the morning, while local shear perturbations are less conducive.
 These results, combined with the lack of a significant difference in the mean fields, suggest that local static stability perturbations may be the driver behind the larger frequency of $R_b < 0.25$ in the morning.
 
 %---------------------------------------------------------------------------------------%
@@ -201,10 +201,10 @@ These results, combined with the lack of a significant difference in the mean fi
 %---------------------------------------------------------------------------------------%
 
 High-vertical-resolution rawinsondes were used to document the existence of low–bulk Richardson number layers in tropical cyclones.
-The peak in $Rb < 0.25$ existed in the inner 200 km at the 13.5-km level.
+The peak in $R_b < 0.25$ existed in the inner 200 km at the 13.5-km level.
 This is consistent with the results of \cite{Molinarietal2014}, but the rawinsondes used here sampled a deeper layer, which allowed for an examination of the tropopause height.
 The low-$R_b$ maximum extended out past the 1000-km radius, with a steady decrease in the height of the maximum to the 11.5-km level at the outer edge.
-The presence of an extended upper-tropospheric low--Richardson number layer supports the assumption of Richardson number criticality in tropical cyclone outflow by \cite{EmanuelRotunno2011}.
+The presence of an extended upper-tropospheric low-Richardson number layer supports the assumption of Richardson number criticality in tropical cyclone outflow by \cite{EmanuelRotunno2011}.
 
 The frequency of upper-tropospheric $R_b < 0.25$ was found to be more than twice as large in hurricanes as in weak TCs.
 The key factor was lower mean static stability in the upper troposphere of hurricanes, which was associated with a warmer midtroposphere and colder upper troposphere.
@@ -223,14 +223,17 @@ This more favorable background state makes it more likely that forcing associate
 The diurnal variation of the Richardson number was also examined. The mean static stability in the evening was nearly the same as the mean static stability in the early morning.
 This is surprising given the results of \cite{MelhauserZhang2014}, which showed that during a perpetual-night simulation, strong radiative cooling at cloud top overlies a layer of longwave warming within cloud.
 Such a radiative heating profile should act to decrease the upper-tropospheric static stability overnight, but this was not observed in the mean fields.
-If the TC diurnal cycle is convective in nature, as suggested by \cite{Dunionetal2014}, and supported by \cite{BowmanFowler2015}, it is possible that by early morning the convection has acted to remove the instability created by these radiative effects.
+If the TC diurnal cycle is convective in nature, as suggested by \cite{Dunionetal2014} and supported by \cite{BowmanFowler2015}, it is possible that by early morning the convection has acted to remove the instability created by these radiative effects.
 The diurnal variations in Richardson number and perturbation static stability, although small, are at least consistent with the presence of more active convection in the morning.
 
 Recent dropsonde observations from the NASA Global Hawk and WB-57 aircraft show promise in further illuminating how TCs modify their upper-tropospheric environment.
 Dropsondes are deployed from these aircraft in the stratosphere, allowing an analysis of the full depth of the cirrus canopy.
-Unlike the rawinsonde composites used here, analyses from these soundings have large spatiotemporal resolution, which allows for a snapshot of the upper troposphere of a single storm.
-Preliminary work with these data show that very large horizontal temperature variations can arise across the cirrus canopy, and large fluctuations can occur at one location over time.
-The causes and implications of these large variations are the subject of future work.
+Unlike the rawinsonde composites used here, analyses from these soundings have high spatiotemporal resolution, which allows for a snapshot of the upper troposphere of a single storm.
+Observations collected by these dropsondes will be analyzed in Chapters \ref{chapter:patricia} and \ref{chapter:hs3}.
+%Preliminary work with these data show that very large horizontal temperature variations can arise across the cirrus canopy, and large fluctuations can occur at one location over time.
+%The causes and implications of these large variations are the subject of future work.
+
+\pagebreak
 
 %---------------------------------------------------------------------------------------%
 %FIGURES AND TABLES
